deployment/04-windows-route.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: win-webserver
    name: windows-route
    namespace: windows-workload
  spec:
    host: winhttp.apps.ocp4.freebsd.tv
    port:
      targetPort: 80
    to:
      kind: Service
      name: win-webserver
      weight: 100
    wildcardPolicy: None
  status: {}
